# BitNetCNN

./: .gitignore  BitConvNeXtv2.py  BitDINOv3.py  BitEoMT.py  BitMobileNetV2.py  BitMobileNetV4.old.py  BitMobileNetV4.py  BitMobileNetV5.py  BitNetCNN.py  BitNetViT.py  BitResNet.py  BitResNet18.py  BitResNet50.py  BitRetinaFace.py  BitYOLOv8.py  LICENSE  QUICK_START.md  README.md  RELEASE_GUIDE.md  ZIP_SUPPORT.md  common_utils.py  dataset.py  hubconf.py  make_timnet_mapping.py  newtest.py  pyproject.toml  test.bat  test_checkpoint.py  test_hub.py  timnet_to_imagenet1k_indices.txt  trainer.py
bitlayers/: acts.py  attn.py  attn2d.py  aug.py  base.py  bit.py  c2f.py  c3k2.py  convba.py  convs.py  drop.py  efficientnet_blocks.py  efficientnet_builder.py  ema.py  helpers.py  linear.py  norms.py  padding.py  pool.py  trm.py  uir.py  weight_init.py
bitlayers/dinov3/configs/: config.py
bitlayers/dinov3/data/: augmentations.py  samplers.py
bitlayers/dinov3/eval/: accumulators.py  data.py  helpers.py  knn.py  linear.py  log_regression.py  setup.py  utils.py
bitlayers/dinov3/fsdp/: ac_compile_parallelize.py
bitlayers/dinov3/hub/: classifiers.py  depthers.py  detectors.py  dinotxt.py  segmentors.py
bitlayers/dinov3/layers/: attention.py  (+8 more)
bitlayersV2/: acts.py  bit.py  convs.py  helpers.py  modules.py  nn.py  norms.py  padding.py  pool.py
dataset/: __init__.py  _legacy.py  augmentations.py  base.py  cifar.py  config.py  imagenet.py  mnist.py  retinaface.py  tinyimagenet.py
docs/: QUICK_START.md  TORCH_HUB_USAGE.md
layers/: attention_pool.py  bit.py  bottleneck_attn.py  cond_conv2d.py  conv2d_same.py  create_conv2d.py  efficientnet_blocks.py  efficientnet_builder.py  global_context.py  linear.py  patch_embed.py  split_attn.py  squeeze_excite.py  std_conv.py
tests/: BitNetV2CNN.py  dino_eomt_detr_widerface.py  test_checkpoint.py  test_hub.py
timmlayers/: _manipulate.py  activations_me.py  attention.py  attention2d.py  attention_pool2d.py  bit.py  cbam.py  classifier.py  conv2d_same.py  create_conv2d.py  efficientnet_blocks.py  halo_attn.py  hybrid_embed.py  lambda_layer.py  linear.py  ml_decoder.py  mlp.py  non_local_attn.py  padding.py  selective_kernel.py  std_conv.py  test_time_pool.py  weight_init.py
(+50 files in other folders)
