[project]
name = "bitnetcnn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "pillow>=11.3.0",
    "pydantic==2.5.3",
    "pydantic2-argparse>=0.9.2",
    "pytorch-lightning>=2.5.5",
    "timm>=1.0.20",
    "torch==2.4.1+cu124",
    "torchvision==0.19.1+cu124",
    "ultralytics>=8.3.225",
]

[dependency-groups]
dev = [
    "huggingface-hub>=0.35.1",
    "ipython>=9.5.0",
    "timm>=1.0.20",
]

[tool.uv.sources]
torch = { index = "torch-cuda" }
torchvision = { index = "torch-cuda" }

[[tool.uv.index]]
name = "torch-cuda"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
