[project]
name = "bitnetcnn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "accelerate>=1.12.0",
    "albumentations>=2.0.8",
    "pillow>=11.3.0",
    "pydanticv2-argparse>=1.0.5",
    "torch==2.4.1+cu124",
    "torchmetrics>=1.8.2",
    "torchvision==0.19.1+cu124",
    "ultralytics>=8.3.225",
]

[dependency-groups]
dev = [
    "huggingface-hub>=0.35.1",
    "ipython>=9.5.0",
    "onnx",
    "onnxruntime",
    "onnxscript<0.4",
]

[tool.uv.sources]
torch = { index = "torch-cuda" }
torchvision = { index = "torch-cuda" }

[[tool.uv.index]]
name = "torch-cuda"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
