[project]
name = "bitnetcnn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "accelerate>=1.12.0",
    "albumentations>=2.0.8",
    "pillow>=11.3.0",
    "pydanticv2-argparse>=1.0.5",
    "torch==2.10.0+cu126",
    "torchvision==0.25+cu126",
    "ultralytics>=8.3.225",
]

[dependency-groups]
dev = [
    "gdown>=5.2.0",
    "huggingface-hub>=0.35.1",
    "ipython>=8.38.0",
    "onnx",
    "onnxruntime",
    "onnxscript>=0.5.7",
]

[tool.uv.sources]
torch = { index = "torch-cuda" }
torchvision = { index = "torch-cuda" }

[[tool.uv.index]]
name = "torch-cuda"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
